--- a/course-02/exercises/udacity-c2-basic-server/package.json
+++ b/course-02/exercises/udacity-c2-basic-server/package.json
@@ -33,6 +33,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.20"
   }
 }
